--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<p>hello my first repo</p>
-<p>This is a new feature(dropdown)</p>
-<p>This is a new feature (button)</p>
-<h4>Its feature2</h4>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <p>Its a correct way</p>
+</body>
+</html>
 
