--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>this is new heading</h3>
     <p>Its a correct way</p>
+    <button>click me</button>
+
 </body>
 </html>
 
