--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
                   </table>
             </div>
         </div>
+
+        <h1>Student Form</h1>
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
+                <form class="form form-control form-group form-check form-text form-textarea">
+                    <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp validate">
+                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1 validate">
+                    </div>
+                    <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1 validate">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+            </div>
+        </div>
     </div>
 
 
