--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <h1>Cards</h1>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="card" style="width: 22rem">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
@@ -109,7 +109,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="card" style="width: 22rem">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
             <div class="card" style="width: 22rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -133,10 +133,11 @@
               </div>
         </div>
       </div>
-      
-      <div class="row">
+      <h1>details</h1>
+      <div class="row  m-3">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus sapiente deleniti eos laborum aut excepturi harum atque voluptates quasi quis nam placeat rem cupiditate quidem, possimus amet nesciunt earum. Laudantium quod et placeat ea commodi architecto molestias quisquam recusandae vero, aperiam molestiae iste aspernatur numquam autem repellat iusto officia optio.</p>
     </div>
+    <button class="btn mx-4" style="background-color: #071A52; color: white;">Cleane it!</button>
 
     </div>
   </body>
