add final change in feature branch

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus sapiente deleniti eos laborum aut excepturi harum atque voluptates quasi quis nam placeat rem cupiditate quidem, possimus amet nesciunt earum. Laudantium quod et placeat ea commodi architecto molestias quisquam recusandae vero, aperiam molestiae iste aspernatur numquam autem repellat iusto officia optio.</p>
     </div>
     <button class="btn mx-4" style="background-color: #071A52; color: white;">Cleane it!</button>
-    <p>In the feature branch</p>
+    <p>In the feature branch final</p>
     </div>
   </body>
 </html>
