added three p tag

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
     <p>In the feature branch final</p>
     <h1>page</h1>
     <h1>End</h1>
+    <div><p>changes in main</p></div>
+    <div><p>changes in main</p></div>
+    <div><p>changes in main</p></div>
     </div>
   </body>
 </html>
