add 3 feature in feature1 branch

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
     <p>In the feature branch final</p>
     <h1>page</h1>
     <h1>End</h1>
+    <div><p>new change in feature 1</p></div>
+    <div><p>new change in feature 1</p></div>
+    <div><p>new change in feature 1</p></div>
     </div>
   </body>
 </html>
