--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Student Record</h1>
-    <div class="container ">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-10 col-md-8 col-sm-12 col-xs-12">
           <table
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-        <h1>Cards</h1>
+      <h1>Cards</h1>
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="card" style="width: 22rem">
@@ -123,30 +123,55 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-            <div class="card" style="width: 22rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
+          <div class="card" style="width: 22rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
       </div>
       <h1>details</h1>
-      <div class="row  m-3">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus sapiente deleniti eos laborum aut excepturi harum atque voluptates quasi quis nam placeat rem cupiditate quidem, possimus amet nesciunt earum. Laudantium quod et placeat ea commodi architecto molestias quisquam recusandae vero, aperiam molestiae iste aspernatur numquam autem repellat iusto officia optio.</p>
-    </div>
-    <button class="btn mx-4" style="background-color: #071A52; color: white;">Cleane it!</button>
-    <p>In the feature branch final</p>
-    <h1>page</h1>
-    <h1>End</h1>
+      <div class="row m-3">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus
+          sapiente deleniti eos laborum aut excepturi harum atque voluptates
+          quasi quis nam placeat rem cupiditate quidem, possimus amet nesciunt
+          earum. Laudantium quod et placeat ea commodi architecto molestias
+          quisquam recusandae vero, aperiam molestiae iste aspernatur numquam
+          autem repellat iusto officia optio.
+        </p>
+      </div>
 
-    <div><p>changes in main</p></div>
-    <div><p>changes in main</p></div>
-    <div><p>new change in feature 1</p></div>
-    <div><p>new change in feature 1</p></div>
+      <button class="btn mx-4" style="background-color: #071a52; color: white">
+        Cleane it!
+      </button>
+      <p>In the feature branch final</p>
+      <h1>page</h1>
+      <h1>End</h1>
 
+      <div><p>changes in main</p></div>
+      <div><p>changes in main</p></div>
+      <div><p>new change in feature 1</p></div>
+      <div><p>new change in feature 1</p></div>
+      <div>
+        <p class="text-center font-monospace">New contibution in this page</p>
+        <div class="text-center"> 
+          <hr class="border border-danger border-2 opacity-50">
+        </div>
+      </div>
+      <div>
+        <p class="text-center font-monospace">New contibution in this main page</p>
+        <div class="text-center"> 
+          <hr class="border border-primary border-2 opacity-50">
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
