add a link below

--- a/index.html
+++ b/index.html
@@ -171,9 +171,12 @@
           <hr class="border border-primary border-2 opacity-50">
         </div>
       </div>
+      <button class="btn mx-4" style="background-color: #071a52; color: white">
+        <a href="#" class="text-white"> Click here and go next page!</a>
+      </button>
         <div>
-          <hr class="border border-danger border-2 opacity-50">
-        </div>
+          <hr class="border border-danger border-2 opacity-50 w-25">
+        <div>
       </div>
       
     </div>
