--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
         <div>
           <hr class="border border-danger border-2 opacity-50">
         </div>
+        <div>
+          <textarea name="" id="" class="w-50"></textarea>
+        </div>
       </div>
+      
       
     </div>
   </body>
